templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
    keel.sh/policy: "force"
  annotations:
    keel.sh/pollSchedule: "@every 1m"
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ryss-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: ryss-frontend
    spec:
      containers:
      - name: site
        image: ryss/webapp:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
