templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-ingress

spec:
  entryPoints:
    - http
  routes:
  - match: Host(`ryss.app`)
    kind: Rule
    services:
    - name: webapp-service
      port: 80
